# sdl_template

./: .clang-format  .gitignore  CMakeLists.txt  CmakePresets.json
.github/workflows/: template-janitor.yml
apps/: CMakeLists.txt
apps/sdl_template/: CMakeLists.txt
apps/sdl_template/src/: app_error.h  app_main.cpp  app_main.h  app_settings.h  main.cpp  sdl_context.h  sdl_init.cpp  sdl_init.h
apps/sdl_template/src/sdl/: context.cpp  context.h  graphics_context.h  video.cpp  video.h
cmake/: Dependencies.cmake  ProjectOptions.cmake  SetProjectWarnings.cmake
src/sdl_template/: CMakeLists.txt
src/sdl_template/src/: main.cpp
